Spring MVC final project -  changed test and UserServiceImpl